--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,20 +4,77 @@
   <meta charset="utf-8">
   <title>Политика конфиденциальности — UDAV Jump</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>body{max-width:800px;margin:40px auto;font:16px/1.6 system-ui,Arial,sans-serif;padding:0 16px}</style>
+  <style>
+    body {
+      background: radial-gradient(circle at center, #1b1d23, #0f1115);
+      color: #e5e5e5;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h1, h2 {
+      color: #4de06b;
+      text-shadow: 0 0 8px rgba(77, 224, 107, 0.4);
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 1.2em;
+    }
+    a {
+      color: #4de06b;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #888;
+      text-align: center;
+    }
+    .logo {
+      display: block;
+      margin: 20px auto;
+      width: 120px;
+      height: 120px;
+      background: radial-gradient(circle at 30% 30%, #50c878, #2b7a4b);
+      border-radius: 50%;
+      position: relative;
+      box-shadow: 0 0 12px rgba(80,200,120,0.5);
+    }
+    .logo::after {
+      content: "🐍";
+      position: absolute;
+      font-size: 64px;
+      top: 25%;
+      left: 28%;
+    }
+  </style>
 </head>
 <body>
+  <div class="logo"></div>
   <h1>Политика конфиденциальности — UDAV Jump</h1>
-  <p>Мы уважаем вашу конфиденциальность. Приложение UDAV Jump не запрашивает персональные данные.</p>
-  <h2>Реклама</h2>
-  <p>В приложении используется Google AdMob. Рекламные сети могут собирать анонимные идентификаторы устройства для показа рекламы в соответствии с их политиками.</p>
-  <p>Подробнее: <a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener">Политика Google по рекламе</a>.</p>
-  <h2>Аналитика</h2>
-  <p>Аналитика не используется, либо может быть подключена в будущем (например, Firebase) для агрегированной статистики.</p>
-  <h2>Дети</h2>
-  <p>Приложение не предназначено для детей младше 13 лет.</p>
-  <h2>Контакты</h2>
-  <p>По вопросам конфиденциальности: your-email@example.com</p>
-  <p>Дата: 2025-11-04</p>
+
+  <p>Мы уважаем вашу конфиденциальность. Приложение <b>UDAV Jump</b> не запрашивает персональные данные пользователей.</p>
+
+  <h2>1. Сбор данных</h2>
+  <p>Приложение не собирает и не хранит персональные данные. Рекламные сети (Google AdMob) могут использовать анонимные идентификаторы устройства для показа рекламы согласно своей <a href="https://policies.google.com/technologies/ads" target="_blank">политике конфиденциальности</a>.</p>
+
+  <h2>2. Реклама</h2>
+  <p>Мы используем сервис Google AdMob для отображения рекламы. Эти объявления помогают поддерживать развитие игры.</p>
+
+  <h2>3. Дети</h2>
+  <p>Приложение не предназначено для пользователей младше 13 лет.</p>
+
+  <h2>4. Контакты</h2>
+  <p>По вопросам, связанным с конфиденциальностью, вы можете связаться с разработчиком по электронной почте: <b>your-email@example.com</b></p>
+
+  <div class="footer">
+    Версия: 1.0 | Дата: 4 ноября 2025<br>
+    © 2025 Vitaliy Korol
+  </div>
 </body>
 </html>
